--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,8 @@
     <url>http://maven.apache.org</url>
 
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
         <spring.version>3.2.8.RELEASE</spring.version>
     </properties>
 
